--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,14 @@
             <version>5.5.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 </project>
